# astroforces

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/drag-cli/: drag_batch_cli.cpp  main.cpp  perturbation_profile_cli.cpp
apps/forces-cli/: antenna_thrust_batch_cli.cpp  antenna_thrust_cli.cpp  drag_batch_cli.cpp  drag_cli.cpp  earth_radiation_batch_cli.cpp  earth_radiation_cli.cpp  erp_batch_cli.cpp  erp_cli.cpp  frame_transform_cli.cpp  gravity_sph_cli.cpp  orbital_elements_cli.cpp  perturbation_profile_cli.cpp  relativity_cli.cpp  srp_batch_cli.cpp  srp_cli.cpp  third_body_batch_cli.cpp  third_body_cli.cpp  transform_profile_cli.cpp
cmake/: CPM.cmake  dependencies.cmake
docs/: ANTENNA_THRUST_OUTPUT_SCHEMA.md  ARCHITECTURE.md  DRAG_OUTPUT_SCHEMA.md  EARTH_RADIATION_OUTPUT_SCHEMA.md  ERP_OUTPUT_SCHEMA.md  GRAVITY_MODEL_NOTES.md  PERF_BASELINE.md  PERTURBATION_PROFILE_SCHEMA.md  RELATIVITY_MODEL_NOTES.md  RELATIVITY_OUTPUT_SCHEMA.md  SRP_OUTPUT_SCHEMA.md  THIRD_BODY_OUTPUT_SCHEMA.md  VALIDATION.md
libs/adapters/include/astroforces/adapters/: dtm2020_adapter.hpp  hwm14_adapter.hpp  nrlmsis21_adapter.hpp
libs/adapters/src/: dtm2020_adapter.cpp  hwm14_adapter.cpp  nrlmsis21_adapter.cpp
libs/atmo-core/include/astroforces/atmo/: constants.hpp  conversions.hpp  interfaces.hpp  types.hpp
libs/atmo-core/include/astroforces/core/: cip.hpp  eop.hpp  sofa_utils.hpp  transforms.hpp
libs/atmo-core/include/dragcpp/atmo/: types.hpp
libs/core/include/astroforces/core/: cip.hpp  constants.hpp  eop.hpp  interfaces.hpp  leap_seconds.hpp  math_utils.hpp  orbital_elements.hpp  sofa_utils.hpp  transforms.hpp  types.hpp
libs/drag-core/include/dragcpp/drag/: drag_model.hpp  drag_perturbation.hpp
libs/drag-core/include/dragcpp/forces/: perturbation.hpp  third_body.hpp
libs/drag-core/src/: drag_model.cpp  drag_perturbation.cpp  perturbation.cpp  third_body.cpp
libs/forces-core/include/astroforces/drag/: drag_model.hpp  drag_perturbation.hpp
libs/forces-core/include/astroforces/forces/: erp_model.hpp  erp_perturbation.hpp  perturbation.hpp  relativity_model.hpp  relativity_perturbation.hpp  surface_force.hpp  third_body.hpp
libs/forces-core/include/astroforces/forces/core/: perturbation.hpp
libs/forces-core/include/astroforces/forces/gravity/: gravity_sph_model.hpp  gravity_sph_perturbation.hpp  relativity_model.hpp  relativity_perturbation.hpp  third_body.hpp
libs/forces-core/include/astroforces/forces/gravity/tides/: aod1b_tide.hpp  constituent_tide.hpp  pole_tide.hpp  solid_earth_tide.hpp  solid_earth_tide_freqdep.hpp
libs/forces-core/include/astroforces/forces/surface/: eclipse.hpp  surface_force.hpp
libs/forces-core/include/astroforces/forces/surface/antenna_thrust/: antenna_thrust_model.hpp  antenna_thrust_perturbation.hpp
libs/forces-core/include/astroforces/forces/surface/drag/: drag_model.hpp  drag_perturbation.hpp
libs/forces-core/include/astroforces/forces/surface/earth_radiation/: earth_radiation_model.hpp  earth_radiation_perturbation.hpp
libs/forces-core/include/astroforces/forces/surface/erp/: erp_model.hpp  erp_perturbation.hpp
libs/forces-core/include/astroforces/forces/surface/srp/: srp_model.hpp  srp_perturbation.hpp
libs/forces-core/include/astroforces/srp/: srp_model.hpp  srp_perturbation.hpp
libs/forces-core/src/: drag_model.cpp  drag_perturbation.cpp  erp_model.cpp  erp_perturbation.cpp  gravity_sph_model.cpp  perturbation.cpp  relativity_model.cpp  relativity_perturbation.cpp  srp_model.cpp  srp_perturbation.cpp  third_body.cpp
libs/forces-core/src/core/: perturbation.cpp
libs/forces-core/src/gravity/: gravity_sph_model.cpp  gravity_sph_perturbation.cpp  relativity_model.cpp  relativity_perturbation.cpp  third_body.cpp
libs/forces-core/src/gravity/tides/: aod1b_tide.cpp  constituent_tide.cpp  pole_tide.cpp  solid_earth_tide.cpp  solid_earth_tide_freqdep.cpp
libs/forces-core/src/surface/antenna_thrust/: antenna_thrust_model.cpp  antenna_thrust_perturbation.cpp
libs/forces-core/src/surface/drag/: drag_model.cpp  drag_perturbation.cpp
libs/forces-core/src/surface/earth_radiation/: earth_radiation_model.cpp  earth_radiation_perturbation.cpp
libs/forces-core/src/surface/erp/: erp_model.cpp  erp_perturbation.cpp
libs/forces-core/src/surface/srp/: srp_model.cpp  srp_perturbation.cpp
libs/models-basic/include/astroforces/models/: exponential_atmosphere.hpp
libs/models-basic/src/: exponential_atmosphere.cpp  zero_wind.cpp
libs/sc-props/include/astroforces/sc/: spacecraft.hpp
libs/sc-props/include/dragcpp/sc/: spacecraft.hpp
libs/sc-props/src/: spacecraft.cpp
libs/space-weather/include/astroforces/weather/: celestrak_csv_provider.hpp  static_provider.hpp
libs/space-weather/include/dragcpp/weather/: celestrak_csv_provider.hpp  static_provider.hpp
libs/space-weather/src/: celestrak_csv_provider.cpp  static_provider.cpp
scripts/: plot_perturbation_profile.py
tests/: drag_perf_benchmark.cpp  test_adapters_integration.cpp  test_antenna_thrust.cpp  test_cip_reader.cpp  test_core_transforms.cpp  test_drag_core.cpp  test_earth_radiation.cpp  test_end_to_end.cpp  test_eop_reader.cpp  test_erp.cpp  test_gravity_sph.cpp  test_leap_seconds.cpp  test_orbital_elements.cpp  test_perturbation_stack.cpp  test_relativity.cpp  test_space_weather_celestrak.cpp  test_space_weather_celestrak_real_snippet.cpp  test_srp.cpp  test_third_body.cpp
tests/data/: celestrak_real_snippet.csv  orbital_elements_example_elements.csv  orbital_elements_example_states.csv
